--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 footer {
-   position: absolute;
+   position: relative;
    bottom: 0;
    width: 100%;
-   height: 13%;
+   height: 0%;
 }
